fix tips dicas modificado ordens e imagens e tamanhos

--- a/dicas.html
+++ b/dicas.html
@@ -132,98 +132,18 @@
             </button>
           </div>
           <div class="featured-image">
-            <img src="images/dica-agachamento.jpg" alt="Como fazer agachamento correto">
+            <img src="images/dica-agachamento.png" alt="Como fazer agachamento correto">
           </div>
         </div>
       </div>
 
       <!-- Tips Grid -->
       <div class="tips-grid">
-        <!-- Tip 1 - Treino -->
-        <article class="tip-card" data-category="treino">
-          <div class="tip-image">
-            <img src="images/dica-flexao.jpg" alt="Flexão de braço">
-            <span class="tip-badge treino">Treino</span>
-            <div class="tip-overlay">
-              <button class="read-btn" data-tip="flexao">
-                <i class="fas fa-book-open"></i>
-              </button>
-            </div>
-          </div>
-          <div class="tip-content">
-            <h3>5 variações de flexão para todos os níveis</h3>
-            <p>Desde iniciante até avançado, aprenda progressões para fortalecer peito, ombros e tríceps em casa.</p>
-            <div class="tip-meta">
-              <span class="tip-time">
-                <i class="fas fa-clock"></i>
-                3 min de leitura
-              </span>
-              <span class="tip-difficulty easy">
-                <i class="fas fa-signal"></i>
-                Fácil
-              </span>
-            </div>
-          </div>
-        </article>
-
-        <!-- Tip 2 - Nutrição -->
-        <article class="tip-card" data-category="nutricao">
-          <div class="tip-image">
-            <img src="images/dica-proteina.jpg" alt="Fontes de proteína">
-            <span class="tip-badge nutricao">Nutrição</span>
-            <div class="tip-overlay">
-              <button class="read-btn" data-tip="proteina">
-                <i class="fas fa-book-open"></i>
-              </button>
-            </div>
-          </div>
-          <div class="tip-content">
-            <h3>Quantas proteínas consumir por dia?</h3>
-            <p>Descubra a quantidade ideal de proteína para seu objetivo e as melhores fontes naturais.</p>
-            <div class="tip-meta">
-              <span class="tip-time">
-                <i class="fas fa-clock"></i>
-                4 min de leitura
-              </span>
-              <span class="tip-difficulty medium">
-                <i class="fas fa-signal"></i>
-                Médio
-              </span>
-            </div>
-          </div>
-        </article>
-
-        <!-- Tip 3 - Motivação -->
-        <article class="tip-card" data-category="motivacao">
-          <div class="tip-image">
-            <img src="images/dica-motivacao.jpg" alt="Motivação para treinar">
-            <span class="tip-badge motivacao">Motivação</span>
-            <div class="tip-overlay">
-              <button class="read-btn" data-tip="motivacao">
-                <i class="fas fa-book-open"></i>
-              </button>
-            </div>
-          </div>
-          <div class="tip-content">
-            <h3>Como manter a motivação em dias difíceis</h3>
-            <p>Estratégias psicológicas para não desistir dos seus objetivos, mesmo nos dias mais desafiadores.</p>
-            <div class="tip-meta">
-              <span class="tip-time">
-                <i class="fas fa-clock"></i>
-                5 min de leitura
-              </span>
-              <span class="tip-difficulty easy">
-                <i class="fas fa-signal"></i>
-                Fácil
-              </span>
-            </div>
-          </div>
-        </article>
 
         <!-- Tip 4 - Suplementos -->
         <article class="tip-card" data-category="suplementos">
           <div class="tip-image">
-            <img src="images/dica-creatina.jpg" alt="Creatina suplemento">
+            <img src="images/dica-creatina.png" alt="Creatina suplemento">
             <span class="tip-badge suplementos">Suplementos</span>
             <div class="tip-overlay">
               <button class="read-btn" data-tip="creatina">
@@ -250,7 +170,7 @@
         <!-- Tip 5 - Recuperação -->
         <article class="tip-card" data-category="recuperacao">
           <div class="tip-image">
-            <img src="images/dica-sono.jpg" alt="Importância do sono">
+            <img src="images/dica-sono.png" alt="Importância do sono">
             <span class="tip-badge recuperacao">Recuperação</span>
             <div class="tip-overlay">
               <button class="read-btn" data-tip="sono">
@@ -278,7 +198,7 @@
         <!-- Tip 6 - Treino -->
         <article class="tip-card" data-category="treino">
           <div class="tip-image">
-            <img src="images/dica-cardio.jpg" alt="Treino cardio">
+            <img src="images/dica-cardio.png" alt="Treino cardio">
             <span class="tip-badge treino">Treino</span>
             <div class="tip-overlay">
               <button class="read-btn" data-tip="cardio">
@@ -305,7 +225,7 @@
         <!-- Tip 7 - Nutrição -->
         <article class="tip-card" data-category="nutricao">
           <div class="tip-image">
-            <img src="images/dica-hidratacao.jpg" alt="Hidratação no treino">
+            <img src="images/dica-hidratacao.png" alt="Hidratação no treino">
             <span class="tip-badge nutricao">Nutrição</span>
             <div class="tip-overlay">
               <button class="read-btn" data-tip="hidratacao">
@@ -332,7 +252,7 @@
         <!-- Tip 8 - Treino -->
         <article class="tip-card" data-category="treino">
           <div class="tip-image">
-            <img src="images/dica-alongamento.jpg" alt="Alongamento pós treino">
+            <img src="images/dica-alongamento.png" alt="Alongamento pós treino">
             <span class="tip-badge treino">Treino</span>
             <div class="tip-overlay">
               <button class="read-btn" data-tip="alongamento">
@@ -359,7 +279,7 @@
         <!-- Tip 9 - Nutrição -->
         <article class="tip-card" data-category="nutricao">
           <div class="tip-image">
-            <img src="images/dica-pre-treino.jpg" alt="Alimentação pré treino">
+            <img src="images/dica-pre-treino.png" alt="Alimentação pré treino">
             <span class="tip-badge nutricao">Nutrição</span>
             <div class="tip-overlay">
               <button class="read-btn" data-tip="pre-treino">
@@ -382,6 +302,87 @@
             </div>
           </div>
         </article>
+
+        <!-- Tip 1 - Treino -->
+        <article class="tip-card" data-category="treino">
+          <div class="tip-image">
+            <img src="images/dica-flexao.png" alt="Flexão de braço">
+            <span class="tip-badge treino">Treino</span>
+            <div class="tip-overlay">
+              <button class="read-btn" data-tip="flexao">
+                <i class="fas fa-book-open"></i>
+              </button>
+            </div>
+          </div>
+          <div class="tip-content">
+            <h3>5 variações de flexão para todos os níveis</h3>
+            <p>Desde iniciante até avançado, aprenda progressões para fortalecer peito, ombros e tríceps em casa.</p>
+            <div class="tip-meta">
+              <span class="tip-time">
+                <i class="fas fa-clock"></i>
+                3 min de leitura
+              </span>
+              <span class="tip-difficulty easy">
+                <i class="fas fa-signal"></i>
+                Fácil
+              </span>
+            </div>
+          </div>
+        </article>
+        <!-- Tip 3 - Motivação -->
+        <article class="tip-card" data-category="motivacao">
+          <div class="tip-image">
+            <img src="images/dica-motivacao.png" alt="Motivação para treinar">
+            <span class="tip-badge motivacao">Motivação</span>
+            <div class="tip-overlay">
+              <button class="read-btn" data-tip="motivacao">
+                <i class="fas fa-book-open"></i>
+              </button>
+            </div>
+          </div>
+          <div class="tip-content">
+            <h3>Como manter a motivação em dias difíceis</h3>
+            <p>Estratégias psicológicas para não desistir dos seus objetivos, mesmo nos dias mais desafiadores.</p>
+            <div class="tip-meta">
+              <span class="tip-time">
+                <i class="fas fa-clock"></i>
+                5 min de leitura
+              </span>
+              <span class="tip-difficulty easy">
+                <i class="fas fa-signal"></i>
+                Fácil
+              </span>
+            </div>
+          </div>
+        </article>
+
+        <!-- Tip 2 - Nutrição -->
+        <article class="tip-card" data-category="nutricao">
+          <div class="tip-image">
+            <img src="images/dica-proteina.png" alt="Fontes de proteína">
+            <span class="tip-badge nutricao">Nutrição</span>
+            <div class="tip-overlay">
+              <button class="read-btn" data-tip="proteina">
+                <i class="fas fa-book-open"></i>
+              </button>
+            </div>
+          </div>
+          <div class="tip-content">
+            <h3>Quantas proteínas consumir por dia?</h3>
+            <p>Descubra a quantidade ideal de proteína para seu objetivo e as melhores fontes naturais.</p>
+            <div class="tip-meta">
+              <span class="tip-time">
+                <i class="fas fa-clock"></i>
+                4 min de leitura
+              </span>
+              <span class="tip-difficulty medium">
+                <i class="fas fa-signal"></i>
+                Médio
+              </span>
+            </div>
+          </div>
+        </article>
+        
       </div>
 
       <!-- Load More -->
