Revert "Carregamento otimizado de recursos"
This reverts commit c7091f3dd98f847696ff31254f28e12270c838d2.

--- a/index.html
+++ b/index.html
@@ -17,21 +17,13 @@
   <meta property="og:url" content="https://personalguimatheus.com.br">
   <meta property="og:type" content="website">
 
-  <!-- Preload de recursos críticos - otimizado -->
-  <link rel="preload" href="images/webp/image1-900.webp" as="image" type="image/webp" media="(max-width: 1023px)">
-  <link rel="preload" href="images/webp/image20-1600.webp" as="image" type="image/webp" media="(min-width: 1024px)">
-  <link rel="preload" href="images/originais/video.mp4" as="video" type="video/mp4">
-
-  <!-- Preconnect para fontes e CDNs -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://cdnjs.cloudflare.com">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
-    rel="stylesheet" preload>
+    rel="stylesheet">
 
   <!-- Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" preload>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
