--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <!-- Vídeo principal com carregamento otimizado -->
       <video id="heroVideo" class="hero-video" playsinline muted loop preload="none" tabindex="-1" aria-hidden="true"
         crossorigin="anonymous">
-        <source src="images/originais/video.mp4" type="video/mp4">
+        <source src="images/originais/video.mp4#t=0.001" type="video/mp4">
         Seu navegador não suporta vídeo.
       </video>
 
