fix jpj for jpg

--- a/index.html
+++ b/index.html
@@ -133,17 +133,17 @@
           srcset="images/webp/image20-1600.webp 1600w, images/webp/image20-900.webp 900w" sizes="100vw">
         <!-- Desktop: JPEG -->
         <source media="(min-width:1024px)" type="image/jpeg"
-          srcset="images/jpj/image20-1600.jpg 1600w, images/jpj/image20-900.jpg 900w" sizes="100vw">
+          srcset="images/jpg/image20-1600.jpg 1600w, images/jpg/image20-900.jpg 900w" sizes="100vw">
 
         <!-- Mobile: WebP -->
         <source media="(max-width:1023px)" type="image/webp"
           srcset="images/webp/image1-900.webp 900w, images/webp/image1-480.webp 480w" sizes="100vw">
         <!-- Mobile: JPEG -->
         <source media="(max-width:1023px)" type="image/jpeg"
-          srcset="images/jpj/image1-900.jpg 900w, images/jpj/image1-480.jpg 480w" sizes="100vw">
+          srcset="images/jpg/image1-900.jpg 900w, images/jpg/image1-480.jpg 480w" sizes="100vw">
 
         <!-- Imagem fallback final -->
-        <img src="images/jpj/image20-900.jpg"
+        <img src="images/jpg/image20-900.jpg"
           alt="Guilherme Matheus – Personal Trainer em Barretos: corpo inteiro no treino (desktop) ou em pé braços cruzados (mobile)"
           loading="eager" decoding="async" width="1600" height="900">
       </picture>
