--- a/sobre.html
+++ b/sobre.html
@@ -64,7 +64,7 @@
             <source media="(max-width: 480px)" srcset="images/webp/image15-480.webp" type="image/webp">
             <source media="(max-width: 900px)" srcset="images/webp/image15-900.webp" type="image/webp">
             <source media="(min-width: 901px)" srcset="images/webp/image15-1600.webp" type="image/webp">
-            <img src="images/jpj/image15-900.jpg" alt="Guilherme Matheus Personal Trainer" class="about-img">
+            <img src="images/jpg/image15-900.jpg" alt="Guilherme Matheus Personal Trainer" class="about-img">
           </picture>
           <div class="about-stats">
             <div class="stat-item">
