fix equal cc button class hero-play-fallback

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </video>
 
       <!-- Botão de play otimizado -->
-      <button id="heroPlayButton" class="hero-play-button" aria-label="Reproduzir vídeo">
+      <button id="heroPlayButton" class="hero-play-fallback" aria-label="Reproduzir vídeo">
         <i class="fas fa-play"></i>
       </button>
 
