--- a/index.html
+++ b/index.html
@@ -107,13 +107,22 @@
       <div class="video-loading" id="videoLoading">
         <div class="loading-spinner"></div>
       </div>
-
-      <!-- Vídeo principal com carregamento otimizado -->
+      <!-- Vídeo principal com versões otimizadas -->
       <video id="heroVideo" class="hero-video" playsinline muted loop preload="none" tabindex="-1" aria-hidden="true"
         crossorigin="anonymous">
-        <source src="images/originais/video.mp4#t=0.001" type="video/mp4">
+        <!-- Mobile: versão leve (480p) -->
+        <source src="images/originais/video-480.mp4" type="video/mp4" media="(max-width: 767px)">
+
+        <!-- Desktop/Tablet: versão média (720p) -->
+        <source src="images/originais/video-720.mp4" type="video/mp4"
+          media="(min-width: 768px) and (max-width: 1439px)">
+
+        <!-- Fallback: vídeo original (somente telas grandes) -->
+        <source src="images/originais/video.mp4" type="video/mp4" media="(min-width: 1440px)">
+
         Seu navegador não suporta vídeo.
       </video>
+
 
       <!-- Botão de play otimizado -->
       <button id="heroPlayButton" class="hero-play-fallback" aria-label="Reproduzir vídeo">
