--- a/dicas.html
+++ b/dicas.html
@@ -132,7 +132,11 @@
             </button>
           </div>
           <div class="featured-image">
-            <img src="images/dica-agachamento.png" alt="Como fazer agachamento correto">
+            <picture>
+              <source type="image/webp" srcset="images/dica-agachamento.webp">
+              <source type="image/png" srcset="images/dica-agachamento.png">
+              <img src="images/dica-agachamento.png" alt="Como fazer agachamento correto" loading="lazy">
+            </picture>
           </div>
         </div>
       </div>
@@ -170,7 +174,11 @@
         <!-- Tip 5 - Recuperação -->
         <article class="tip-card" data-category="recuperacao">
           <div class="tip-image">
-            <img src="images/dica-sono.png" alt="Importância do sono">
+            <picture>
+              <source type="image/webp" srcset="images/dica-sono.webp">
+              <source type="image/png" srcset="images/dica-sono.png">
+              <img src="images/dica-sono.png" alt="Importância do sono" loading="lazy" decoding="async">
+            </picture>
             <span class="tip-badge recuperacao">Recuperação</span>
             <div class="tip-overlay">
               <button class="read-btn" data-tip="sono">
@@ -198,7 +206,11 @@
         <!-- Tip 6 - Treino -->
         <article class="tip-card" data-category="treino">
           <div class="tip-image">
-            <img src="images/dica-cardio.png" alt="Treino cardio">
+            <picture>
+              <source type="image/webp" srcset="images/dica-cardio.webp">
+              <source type="image/png" srcset="images/dica-cardio.png">
+              <img src="images/dica-cardio.png" alt="Treino cardi" loading="lazy" decoding="async">
+            </picture>
             <span class="tip-badge treino">Treino</span>
             <div class="tip-overlay">
               <button class="read-btn" data-tip="cardio">
@@ -225,7 +237,11 @@
         <!-- Tip 7 - Nutrição -->
         <article class="tip-card" data-category="nutricao">
           <div class="tip-image">
-            <img src="images/dica-hidratacao.png" alt="Hidratação no treino">
+            <picture>
+              <source type="image/webp" srcset="images/dica-hidratacao.webp">
+              <source type="image/png" srcset="images/dica-hidratacao.png">
+              <img src="images/dica-hidratacao.png" alt="Hidratação no treino" loading="lazy" decoding="async">
+            </picture>
             <span class="tip-badge nutricao">Nutrição</span>
             <div class="tip-overlay">
               <button class="read-btn" data-tip="hidratacao">
@@ -252,7 +268,11 @@
         <!-- Tip 8 - Treino -->
         <article class="tip-card" data-category="treino">
           <div class="tip-image">
-            <img src="images/dica-alongamento.png" alt="Alongamento pós treino">
+            <picture>
+              <source type="image/webp" srcset="images/dica-alongamento.webp">
+              <source type="image/png" srcset="images/dica-alongamento.png">
+              <img src="images/dica-alongamento.png" alt="Alongamento pós treino" loading="lazy" decoding="async">
+            </picture>
             <span class="tip-badge treino">Treino</span>
             <div class="tip-overlay">
               <button class="read-btn" data-tip="alongamento">
@@ -279,7 +299,11 @@
         <!-- Tip 9 - Nutrição -->
         <article class="tip-card" data-category="nutricao">
           <div class="tip-image">
-            <img src="images/dica-pre-treino.png" alt="Alimentação pré treino">
+            <picture>
+              <source type="image/webp" srcset="images/dica-pre-treino.webp">
+              <source type="image/png" srcset="images/dica-pre-treino.png">
+              <img src="images/dica-pre-treino.png" alt="Alimentação pré treino" loading="lazy" decoding="async">
+            </picture>
             <span class="tip-badge nutricao">Nutrição</span>
             <div class="tip-overlay">
               <button class="read-btn" data-tip="pre-treino">
@@ -306,7 +330,11 @@
         <!-- Tip 1 - Treino -->
         <article class="tip-card" data-category="treino">
           <div class="tip-image">
-            <img src="images/dica-flexao.png" alt="Flexão de braço">
+            <picture>
+              <source type="image/webp" srcset="images/dica-flexao.webp">
+              <source type="image/png" srcset="images/dica-flexao.png">
+              <img src="images/dica-flexao.png" alt="Flexão de braço" loading="lazy" decoding="async">
+            </picture>
             <span class="tip-badge treino">Treino</span>
             <div class="tip-overlay">
               <button class="read-btn" data-tip="flexao">
@@ -332,7 +360,11 @@
         <!-- Tip 3 - Motivação -->
         <article class="tip-card" data-category="motivacao">
           <div class="tip-image">
-            <img src="images/dica-motivacao.png" alt="Motivação para treinar">
+            <picture>
+              <source type="image/webp" srcset="images/dica-motivacao.webp">
+              <source type="image/png" srcset="images/dica-motivacao.png">
+              <img src="images/dica-motivacao.png" alt="Motivação para treinar" loading="lazy" decoding="async">
+            </picture>
             <span class="tip-badge motivacao">Motivação</span>
             <div class="tip-overlay">
               <button class="read-btn" data-tip="motivacao">
@@ -359,7 +391,11 @@
         <!-- Tip 2 - Nutrição -->
         <article class="tip-card" data-category="nutricao">
           <div class="tip-image">
-            <img src="images/dica-proteina.png" alt="Fontes de proteína">
+            <picture>
+              <source type="image/webp" srcset="images/dica-proteina.webp">
+              <source type="image/png" srcset="images/dica-proteina.png">
+              <img src="images/dica-proteina.png" alt="Fontes de proteína" loading="lazy" decoding="async">
+            </picture>
             <span class="tip-badge nutricao">Nutrição</span>
             <div class="tip-overlay">
               <button class="read-btn" data-tip="proteina">
@@ -382,7 +418,7 @@
             </div>
           </div>
         </article>
-        
+
       </div>
 
       <!-- Load More -->
