Fix Treino personalizado PDF para via aplicativo MFIT

--- a/servicos.html
+++ b/servicos.html
@@ -115,7 +115,7 @@
 
           <ul class="service-features">
             <li><i class="fas fa-check"></i> Anamnese completa online</li>
-            <li><i class="fas fa-check"></i> Treino personalizado em PDF</li>
+            <li><i class="fas fa-check"></i> Treino personalizado via aplicativo MFIT</li>
             <li><i class="fas fa-check"></i> Vídeos explicativos dos exercícios</li>
             <li><i class="fas fa-check"></i> Suporte diário via WhatsApp</li>
             <li><i class="fas fa-check"></i> Ajustes semanais no treino</li>
