Fix correction hidroginástica

--- a/faq.html
+++ b/faq.html
@@ -440,7 +440,7 @@
 
               <h4>✅ Recomendado:</h4>
               <ul>
-                <li><strong>Natação ou hidrogimástica:</strong> Sem impacto nas articulações</li>
+                <li><strong>Natação ou hidroginástica:</strong> Sem impacto nas articulações</li>
                 <li><strong>Pilates:</strong> Fortalece sem sobrecarregar</li>
                 <li><strong>Treino funcional com elásticos:</strong> Resistência controlada</li>
                 <li><strong>Caminhada:</strong> Baixo impacto, pode ser diária</li>
